--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -8,19 +8,34 @@
   "manifest_description": {
     "message": "TODO"
   },
-  "views_SaveBackupPhrase_heading":  {
+  "view_Welcome_heading": {
+    "message": "Welcome to your Sporran"
+  },
+  "view_Welcome_info": {
+    "message": "You currently don't have any accounts."
+  },
+  "view_Welcome_invitation": {
+    "message": "Create your first account to get started."
+  },
+  "view_Welcome_create": {
+    "message": "Create Account"
+  },
+  "view_Welcome_import": {
+    "message": "Import an Account from pre-existing phrase"
+  },
+  "view_SaveBackupPhrase_heading": {
     "message": "Your Backup Phrase"
   },
-  "views_SaveBackupPhrase_explanation":  {
+  "view_SaveBackupPhrase_explanation": {
     "message": "You have to click or tap an empty field to see one word of the phrase. For the next step, you need your written words in the correct order."
   },
-  "views_SaveBackupPhrase_CTA":  {
+  "view_SaveBackupPhrase_CTA": {
     "message": "Next Step"
   },
-  "common_action_back":  {
+  "common_action_back": {
     "message": "Back"
   },
-  "common_action_cancel":  {
+  "common_action_cancel": {
     "message": "Cancel"
   }
 }
