--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -222,5 +222,14 @@
   },
   "view_AccountOverview_receive": {
     "message": "Receive"
+  },
+  "component_AddAccount_title": {
+    "message": "Add account"
+  },
+  "component_AddAccount_create": {
+    "message": "Create new account"
+  },
+  "component_AddAccount_import": {
+    "message": "Import account from pre-existing phrase"
   }
 }
