--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -165,13 +165,23 @@
   "view_CreateAccountSuccess_CTA": {
     "message": "See the wallet"
   },
-  "view_ReceiveToken_heading":{
+  "view_ReceiveToken_heading": {
     "message": "Receive"
   },
-  "view_ReceiveToken_explanation":{
-    "message": "copy and send your wallet ID"
-  },"view_ReceiveToken_account_address":{
-    "message": "my account address"
+  "view_ReceiveToken_explanation": {
+    "message": "Copy and send your wallet ID"
+  },
+  "view_ReceiveToken_account_address": {
+    "message": "My account address"
+  },
+  "view_ReceiveToken_name": {
+    "message": "Account name:"
+  },
+  "view_ReceiveToken_copy_button": {
+    "message": "copy to clipboard"
+  },
+  "view_ReceiveToken_done_button": {
+    "message": "DONE"
   },
   "view_Accounts_title": {
     "message": "Your accounts"
