SK-106 Account options menu (#80)

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -60,6 +60,30 @@
   "component_Stats_balance": {
     "message": " Balance: "
   },
+  "component_AddAccount_label": {
+    "message": "Add account"
+  },
+  "component_AddAccount_create": {
+    "message": "Create new account"
+  },
+  "component_AddAccount_import": {
+    "message": "Import account from pre-existing phrase"
+  },
+  "component_AccountOptions_label": {
+    "message": "Account options"
+  },
+  "component_AccountOptions_heading": {
+    "message": "Account"
+  },
+  "component_AccountOptions_edit": {
+    "message": "Edit account name"
+  },
+  "component_AccountOptions_forget": {
+    "message": "Forget account"
+  },
+  "component_AccountOptions_reset_password": {
+    "message": "Reset password"
+  },
   "view_Welcome_heading": {
     "message": "Welcome to your Sporran"
   },
@@ -241,14 +265,5 @@
   },
   "view_AccountOverview_receive": {
     "message": "Receive"
-  },
-  "component_AddAccount_title": {
-    "message": "Add account"
-  },
-  "component_AddAccount_create": {
-    "message": "Create new account"
-  },
-  "component_AddAccount_import": {
-    "message": "Import account from pre-existing phrase"
   }
 }
