--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -93,7 +93,7 @@
   "component_Settings_reset_password": {
     "message": "Reset password for current account"
   },
-  "component_Settings_t&c": {
+  "component_Settings_terms_and_conditions": {
     "message": "Terms & Conditions"
   },
   "component_Settings_faq": {
