feat: add designs to save backup phrase screen

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -138,7 +138,7 @@
     "message": "I understand this - go to the Phrase"
   },
   "view_SaveBackupPhrase_heading": {
-    "message": "Your Backup Phrase"
+    "message": "My Backup Phrase"
   },
   "view_SaveBackupPhrase_explanation": {
     "message": "You have to click or tap an empty field to see one word of the phrase. For the next step, you need your written words in the correct order."
