extracted list items into sub-components

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -173,6 +173,9 @@
   "view_ImportBackupPhrase_error_backup_phrase_length": {
     "message": "Please insert all the words of the backup phrase"
   },
+  "view_ImportBackupPhrase_error_typo": {
+    "message": "It looks like there's a typo in this word"
+  },
   "view_ImportBackupPhrase_error_invalid_word": {
     "message": "It looks like there’s a typo in word $number$: “$word$”",
     "placeholders": {
