added the QR code toggle

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -265,6 +265,9 @@
   "view_ReceiveToken_done_button": {
     "message": "DONE"
   },
+  "view_ReceiveToken_enlarge": {
+    "message": "Enlarge"
+  },
   "view_AccountOverview_title": {
     "message": "Your accounts"
   },
