--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -272,7 +272,7 @@
     "message": "Enlarge"
   },
   "view_AccountOverview_title": {
-    "message": "Your accounts"
+    "message": "Your Accounts"
   },
   "view_AccountOverview_subtitle_one": {
     "message": "You have $number$ account",
